# simple-ftp-server

./: .gitignore  Cargo.toml  README.md
ftp/: Cargo.toml
ftp-macros/: Cargo.toml
ftp-server/: Cargo.toml
ftp-server/src/: app.rs  config.rs  data_transfer_process.rs  ftpserver.rs  main.rs  protocol_interpreter.rs
ftp-server/src/config/: cli.rs  mod.rs  toml_config.rs  types.rs
ftp/src/: client.rs  command.rs  config.rs  data_transfer_process.rs  ftpserver.rs  hostport.rs  lib.rs  protocol_interpreter.rs  reply.rs  user.rs
src/: config.rs  data_transfer_process.rs  ftpserver.rs  main.rs  protocol_interpreter.rs  server.rs  test.rs
test-suite/: Cargo.toml
test-suite/src/: lib.rs  test_authorization.rs  test_basic_commands.rs
