[package]
name = "ftp-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ftp = { path = "../ftp" }
anyhow = "1.0.56"
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
simplelog = "0.11.2"
log = "0.4.16"
