[package]
name = "ftp-server"
authors = ["Stanisław Borowy <stabor@startmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ftp = { path = "../ftp" }
anyhow = "1.0.56"
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
simplelog = "0.11.2"
log = "0.4.16"
clap = { version = "3.1.14", features = ["derive"] }
user-error = "1.2.8"
