[package]
name = "ftp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.16"
simplelog = "0.11.2"
strum = "0.24"
strum_macros = "0.24"
fallible-iterator = "0.2.0"
anyhow = "1.0.56"
thiserror = "1.0.30"