[package]
name = "test-suite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ftp = { path = "../ftp"}
tempdir = "0.3.7"
ftp_client = { version = "3.0.1", package = "ftp"}
log = "0.4.16"
simplelog = "0.11.2"